Creacion de HTML, CSS Y JS INTEGRADO

--- a/src/main/resources/template/plataformaAdministrador.html
+++ b/src/main/resources/template/plataformaAdministrador.html
@@ -31,7 +31,7 @@
             Empleados
         </h1>
 
-        <button id="nuevo">
+        <button id="nuevo" onclick="Nuevo2()">
             Nuevo
         </button>
 
@@ -222,5 +222,8 @@
             
           </table>
     </section>
+
+    <script src="/JS/Js.js"></script>
+    <script src="/JS/bd.js.JS"></script>
 </body>
 </html>
