--- a/src/main/resources/template/plataformaEmpleado.html
+++ b/src/main/resources/template/plataformaEmpleado.html
@@ -31,7 +31,7 @@
             Ingresos y egresos
         </h1>
 
-        <button id="nuevo">
+        <button id="nuevo" onclick="Nuevo3()">
             Nuevo
         </button>
 
@@ -153,5 +153,8 @@
             </div>
         </div>
     </section>
+
+    <script src="/JS/Js.js"></script>
+    <script src="/JS/bd.js.JS"></script>
 </body>
 </html>
