--- a/src/main/resources/template/plataformaSuperadministrador.html
+++ b/src/main/resources/template/plataformaSuperadministrador.html
@@ -31,7 +31,7 @@
             Empresas
         </h1>
 
-        <button id="nuevo">
+        <button id="nuevo" onclick="Nuevo1()">
             Nuevo
         </button>
 
@@ -145,5 +145,8 @@
             </tr>
           </table>
     </section>
+
+    <script src="/JS/Js.js"></script>
+    <script src="/JS/bd.js.JS"></script>
 </body>
 </html>
