--- a/src/main/resources/template/Login.html
+++ b/src/main/resources/template/Login.html
@@ -41,7 +41,7 @@
         
                     <button class="Olvidar">¿Olvidaste tu Contraseña?</button>
         
-                    <button type="submit" value="Submit">
+                    <button type="submit" value="Submit" onclick="Plataforma1()">
                         Iniciar
                     </button>
                 </form> 
@@ -72,7 +72,7 @@
         
                     <button class="Olvidar">¿Olvidaste tu Contraseña?</button>
         
-                    <button type="submit" value="Submit">
+                    <button type="submit" value="Submit" onclick="Plataforma2()">
                         Iniciar
                     </button>
                 </form> 
@@ -102,7 +102,7 @@
         
                     <button class="Olvidar">¿Olvidaste tu Contraseña?</button>
         
-                    <button type="submit" value="Submit">
+                    <button type="submit" value="Submit" onclick="Plataforma3()">
                         Iniciar
                     </button>
                 </form> 
