Cambios al HTML, CSS Y JS y agregar las ultimas imagenes

--- a/src/main/resources/template/index.html
+++ b/src/main/resources/template/index.html
@@ -60,8 +60,7 @@
                     Soy Nelson
                     <br>
                     Mi rol es diseñador de software
-                    <br>
-                    Me gusta </p>
+                </p>
             </div>
             
             <div id="imagenes">
@@ -69,8 +68,8 @@
                 <img src="/IMG/Sebastian.png" alt="1">
                 <img src="/IMG/Felipe.png" alt="2">
                 <img src="/IMG/Manuela.png" alt="3">
-                <img src="" alt="4">
-                <img src="" alt="5">
+                <img src="/IMG/Maria.png" alt="4">
+                <img src="/IMG/Shaiel.png" alt="5">
             </div>
         </div>
     </div>
