--- a/src/main/resources/template/CSS/Style.css
+++ b/src/main/resources/template/CSS/Style.css
@@ -197,3 +197,438 @@ form button{
     padding: 15px 50px;
 }
 /*FIN FOOTER*/
+
+/*RESPONSIVE TABLET*/
+
+@media screen and (max-width : 768px) {
+
+    @font-face {
+        font-family: Made Tommy-Black;
+        src: url(/MADE\ TOMMY\ Black_PERSONAL\ USE.otf);
+    }
+
+    @font-face {
+        font-family: Made Tommy-Thin;
+        src: url(/MADE\ TOMMY\ Thin_PERSONAL\ USE.otf);
+    }
+
+    h1, h2, h3, h4, h5, h6{
+        font-family: Made Tommy-Black;
+        color: #4E14A8;
+    }
+
+    p{
+        font-family: Made Tommy-Thin;
+    }
+
+    *{
+        margin: 0px;
+    }
+
+    body{
+        background-color: #ffffff;
+    }
+
+    .container{
+        max-width: 1400px;
+        margin: 0px 40px;
+    }
+
+    /*MENU*/
+
+    header #barraInicial{
+        display: flex;
+        background-color: #86868720;
+        padding: 15px 50px;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    header a{
+        text-decoration: none;
+        color: black;
+        font-family: Made Tommy-Black;
+        padding: 15px;
+    }
+
+    #Plataforma{
+        display: none;
+    }
+    #Login{
+        background-color: #7839B350;
+        color: #ffffff;
+        border-radius: 10px;
+        padding: 10px 22px 10px 22px;
+    }
+
+    #Login:hover{
+        background-color: #7839B3;
+    }
+
+    div.menu a{
+        justify-content: space-between;
+    }
+
+    header a:hover{
+        color: #7839B3;
+    }
+
+    /*FIN MENU*/
+
+    /*BANNER*/
+
+    .banner{
+        background-image: url(/IMG/Banner.png);
+        background-repeat: no-repeat;
+        background-size: 100%;
+        min-height: 330px;
+    }
+
+    .banner h2{
+        color: black;
+        padding: 22% 0px 0px 80px;
+        font-size: 40px;
+    }
+
+    /*FIN BANNER*/
+
+    /*SOMOS*/
+    #somos{
+        margin: 30px 0px;
+    }
+
+    .titulo-derecho h2{
+        text-align: right;
+    }
+
+
+    .somos-img-p{
+        display: flex;
+        align-items: center;
+    }
+
+    .somos-img-p p{
+        padding: 0px 80px;
+    }
+
+    /*FIN SOMOS*/
+
+    /*TEAM*/
+    .titulo-izquierdo h2{
+        text-align: left;
+    }
+
+    #ImagenEscogida{
+        display: flex;
+        align-items: center;
+        margin: 20px 0px;
+    }
+
+    #ImagenEscogida img{
+        width: 400px;
+    }
+
+    #ImagenEscogida p{
+        padding: 0px 80px;
+    }
+
+    #imagenes{
+        margin: auto;
+    }
+
+    #imagenes img{
+        max-width: 100px;
+    }
+
+
+    /*FIN TEAM*/
+
+    /*FOOTER*/
+
+    footer{
+        margin: auto;
+        text-align: center;
+    }
+
+    form{
+        display: inline-grid;
+    }
+
+    form input{
+        margin: 10px 0px;
+        padding: 10px 10px;
+        background-color: #7839B220;
+        border: 0px;
+        color: #000000;
+        font-family: Made Tommy-Black;
+        font-size: 15px;
+    }
+
+    form textarea{
+        margin: 10px 0px;
+        width: 350px;
+        height: 100px;
+        padding: 10px 10px;
+        background-color: #7839B220;
+        border: 0px;
+        color: #000000;
+        font-family: Made Tommy-Black;
+        font-size: 15px;
+    }
+
+    form button{
+        background-color:#4E14A850;
+        border: 0px;
+        color: white;
+        justify-content: center;
+        align-items: center;
+        margin: 10px 100px;
+        padding: 10px;
+        font-size: 20px;
+    }
+    /*
+    #Nombre{
+        background-image: url(/IMG/Persona.png);
+        background-repeat: no-repeat;
+        align-items: center;
+    }
+    #E-mail{
+        background-image: url(/IMG/E-mail.png);
+        background-repeat: no-repeat;
+    }
+    #Mensaje{
+        background-image: url(/IMG/Mensaje.png);
+        background-repeat: no-repeat;
+    }*/
+
+    .copyright{
+        background-color: #86868720;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 15px 50px;
+    }
+    /*FIN FOOTER*/
+}
+
+/*FIN RESPONSIVE TABLET*/
+
+/*RESPONSIVE CELULAR*/
+@media screen and (max-width : 320px) {
+        @font-face {
+        font-family: Made Tommy-Black;
+        src: url(/MADE\ TOMMY\ Black_PERSONAL\ USE.otf);
+    }
+
+    @font-face {
+        font-family: Made Tommy-Thin;
+        src: url(/MADE\ TOMMY\ Thin_PERSONAL\ USE.otf);
+    }
+
+    h1, h2, h3, h4, h5, h6{
+        font-family: Made Tommy-Black;
+        color: #4E14A8;
+    }
+
+    p{
+        font-family: Made Tommy-Thin;
+    }
+
+    *{
+        margin: 0px;
+    }
+
+    body{
+        background-color: #ffffff;
+    }
+
+    .container{
+        max-width: 1400px;
+        margin: 0px 10px;
+    }
+
+    /*MENU*/
+
+    header #barraInicial{
+        display: flex;
+        background-color: #86868720;
+        padding: 15px 50px;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    header a{
+        text-decoration: none;
+        color: black;
+        font-family: Made Tommy-Black;
+        padding: 15px;
+    }
+
+    #Plataforma{
+        display: none;
+    }
+    #Login{
+        background-color: #7839B350;
+        color: #ffffff;
+        border-radius: 10px;
+        padding: 10px 22px 10px 22px;
+    }
+
+    #Login:hover{
+        background-color: #7839B3;
+    }
+
+    div.menu a{
+        justify-content: space-between;
+        display: none;
+    }
+
+    header a:hover{
+        color: #7839B3;
+    }
+
+    /*FIN MENU*/
+
+    /*BANNER*/
+
+    .banner{
+        background-image: url(/IMG/Banner.png);
+        background-repeat: no-repeat;
+        background-size: 100%;
+        min-height: 150px;
+    }
+
+    .banner h2{
+        color: black;
+        padding: 22% 0px 0px 30px;
+        font-size: 15px;
+    }
+
+    /*FIN BANNER*/
+
+    /*SOMOS*/
+    #somos{
+        margin: 30px 0px;
+    }
+
+    .titulo-derecho h2{
+        text-align: right;
+    }
+
+
+    .somos-img-p{
+        display: flex;
+        align-items: center;
+    }
+
+    .somos-img-p img{
+        width: 150px;
+    }
+
+    .somos-img-p p{
+        padding: 0px 0px 0px 20px;
+        font-size: 10px;
+    }
+
+    /*FIN SOMOS*/
+
+    /*TEAM*/
+    .titulo-izquierdo h2{
+        text-align: left;
+    }
+
+    #ImagenEscogida{
+        display: flex;
+        align-items: center;
+        margin: 20px 0px;
+    }
+
+    #ImagenEscogida img{
+        width: 150px;
+    }
+
+    #ImagenEscogida p{
+        padding: 0px 0px 0px 20px;
+        font-size: 10px;
+    }
+
+    #imagenes{
+        margin: auto;
+    }
+
+    #imagenes img{
+        max-width: 100px;
+    }
+
+
+    /*FIN TEAM*/
+
+    /*FOOTER*/
+
+    footer{
+        margin: auto;
+        text-align: center;
+    }
+
+    form{
+        display: inline-grid;
+    }
+
+    form input{
+        margin: 10px 0px;
+        padding: 10px 10px;
+        background-color: #7839B220;
+        border: 0px;
+        color: #000000;
+        font-family: Made Tommy-Black;
+        font-size: 15px;
+    }
+
+    form textarea{
+        margin: 10px 0px;
+        width: 270px;
+        height: 100px;
+        padding: 10px 10px;
+        background-color: #7839B220;
+        border: 0px;
+        color: #000000;
+        font-family: Made Tommy-Black;
+        font-size: 15px;
+    }
+
+    form button{
+        background-color:#4E14A850;
+        border: 0px;
+        color: white;
+        justify-content: center;
+        align-items: center;
+        margin: 10px 100px;
+        padding: 10px;
+        font-size: 20px;
+    }
+    /*
+    #Nombre{
+        background-image: url(/IMG/Persona.png);
+        background-repeat: no-repeat;
+        align-items: center;
+    }
+    #E-mail{
+        background-image: url(/IMG/E-mail.png);
+        background-repeat: no-repeat;
+    }
+    #Mensaje{
+        background-image: url(/IMG/Mensaje.png);
+        background-repeat: no-repeat;
+    }*/
+
+    .copyright{
+        background-color: #86868720;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px;
+    }
+    /*FIN FOOTER*/
+}
+
+/*FIN RESPONSIVE CELULAR*/
