RESPONSIVE INDEX PARA TABLET Y CELULAR

--- a/src/main/resources/template/CSS/Style.css
+++ b/src/main/resources/template/CSS/Style.css
@@ -273,6 +273,10 @@ form button{
         color: #7839B3;
     }
 
+    .Menu-hamburguesa-pop-up{
+        display: none;
+    }
+
     /*FIN MENU*/
 
     /*BANNER*/
@@ -415,7 +419,8 @@ form button{
 
 /*RESPONSIVE CELULAR*/
 @media screen and (max-width : 320px) {
-        @font-face {
+
+    @font-face {
         font-family: Made Tommy-Black;
         src: url(/MADE\ TOMMY\ Black_PERSONAL\ USE.otf);
     }
@@ -487,7 +492,55 @@ form button{
         color: #7839B3;
     }
 
+    #Hamburguesa{
+        display: block;
+        border: 0px;
+        background-color: transparent;
+    }
+
+    .Menu-hamburguesa-pop-up{
+        display: none;
+
+    }
     /*FIN MENU*/
+
+    /*HAMBURGUESA*/
+
+    .Menu-hamburguesa-pop-up{
+        display: none;
+        background-color: white;
+        height: 100%;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        position: fixed;
+        margin-top: 80px;
+    }
+
+    .Menu-hamburguesa-pop-up a{
+        text-decoration: none;
+        display: block;
+        margin: 10px 30px;
+        color: black;
+        font-family: Made Tommy-Black;
+    }
+
+    .Menu-hamburguesa-pop-up #Login{
+        display: inline-table;
+    }
+
+    .Cerrar{
+        background-color: #7839B350;
+        border: 0px;
+        border-radius: 10px;
+        color: white;
+        padding: 10px;
+        float: right;
+        margin: 20px;
+        font-size: 15px;
+    }
+    /*FIN HAMBURGUESA*/
 
     /*BANNER*/
 
@@ -557,7 +610,7 @@ form button{
     }
 
     #imagenes img{
-        max-width: 100px;
+        max-width: 95px;
     }
 
 
