--- a/src/main/resources/template/index.html
+++ b/src/main/resources/template/index.html
@@ -27,6 +27,15 @@
                 <a id="Plataforma" href="/plataforma.html">Plataforma</a>
                 <a id="Login" href="/Login.html">Ingresa</a>
             </div>
+
+            <div class="menu-hamburguesa">
+                <a href="#somos">Somos</a>
+                <a href="#team">Team</a>
+                <a href="#footer">Contactanos</a>
+                <a id="Plataforma" href="/plataforma.html">Plataforma</a>
+                <a id="Login" href="/Login.html">Ingresa</a>
+            </div>
+
         </div>
         
         <div class="banner">
@@ -100,7 +109,21 @@
             </div>
         </div>
     </footer>
-    
+
+    <!--HAMBURGUESA-->
+    <div class="Menu-hamburguesa-pop-up">
+
+        <a href="#somos">Somos</a>
+        <a href="#team">Team</a>
+        <a href="#footer">Contactanos</a>
+        <a id="Plataforma" href="/plataforma.html">Plataforma</a>
+        <a id="Login" href="/Login.html">Ingresa</a>
+
+        <button class="Cerrar" onclick="cerrarmenu()">
+            Cerrar
+        </button>
+    </div>
+    <!--FIN HAMBURGUESA-->
     <script src="/JS/Js.js"></script>
     <script src="/JS/bd.js.JS"></script>
 </body>
