--- a/src/main/resources/template/CSS/StyleLogin.css
+++ b/src/main/resources/template/CSS/StyleLogin.css
@@ -142,3 +142,309 @@ form button{
 button{
     cursor: pointer;
 }
+
+
+/*RESPONSIVE*/
+@media screen and (max-width : 768px){
+    @font-face {
+        font-family: Made Tommy-Black;
+        src: url(/MADE\ TOMMY\ Black_PERSONAL\ USE.otf);
+    }
+
+    @font-face {
+        font-family: Made Tommy-Thin;
+        src: url(/MADE\ TOMMY\ Thin_PERSONAL\ USE.otf);
+    }
+
+    h1, h2, h3, h4, h5, h6{
+        font-family: Made Tommy-Black;
+        color: #4E14A8;
+    }
+
+    p{
+        font-family: Made Tommy-Black;
+        color: #4E14A8;
+    }
+
+    *{
+        margin: 0px;
+    }
+
+    body{
+        background-color: #ffffff;
+    }
+
+    h1{
+        text-align: center;
+        margin: 30px;
+    }
+
+    h2{
+        text-align: center;
+    }
+
+    /**/
+
+    #Login{
+        display: flex;
+        align-items:flex-start;
+        justify-content: space-around;
+    }
+
+    section div{
+        justify-content: center;
+        text-align: center;
+    }
+
+    #imagenFondo1{
+        position: absolute;
+        z-index: 3;
+        background: lightgray;
+        width: 30%;
+        left: 15px;
+        bottom: 60px;
+
+    }
+
+    #imagenFondo2{
+        position: absolute;
+        z-index: 3;
+        background: lightgray;
+        width: 30%;
+        left: 269px;
+        bottom: 60px;
+    }
+
+    #imagenFondo3{
+        position: absolute;
+        z-index: 3;
+        background: lightgray;
+        width: 30%;
+        right: 12px;
+        bottom: 60px;
+    }
+
+    .botoneslogin{
+        background-color: transparent;
+        border: 0px;
+    }
+
+
+    #FondoArribaSuperadministrador{
+        margin: 70px 0px;
+    }
+
+    #FondoArribaAdministrador{
+        margin: 70px 0px 0px;
+    }
+
+    #FondoArribaEmpleado{
+        margin: 70px 0px 0px;
+    }
+
+    .titulos{
+        margin: 20px 0px 0px;
+    }
+
+    section div div form{
+        display: grid;
+    }
+
+    form{
+        display: inline-grid;
+    }
+
+    form input{
+        margin: 10px 0px;
+        padding: 10px 10px;
+        width: 200px;
+        background-color: #7839B220;
+        border: 0px;
+        color: #000000;
+        font-family: Made Tommy-Black;
+        font-size: 15px;
+    }
+
+    .Olvidar{
+        background-color:transparent;
+        border: 0px;
+        color: black;
+        text-align: end;
+        margin-right: 0px;
+        padding: 0px;
+        font-size: 15px;
+        font-family: Made Tommy-Thin;
+    }
+
+    form button{
+        background-color:#4E14A850;
+        border: 0px;
+        color: white;
+        justify-content: center;
+        align-items: center;
+        margin: 10px 50px;
+        padding: 10px;
+        font-size: 20px;
+    }
+
+    button{
+        cursor: pointer;
+    }
+}
+
+@media screen and (max-width : 320px){
+    @font-face {
+        font-family: Made Tommy-Black;
+        src: url(/MADE\ TOMMY\ Black_PERSONAL\ USE.otf);
+    }
+
+    @font-face {
+        font-family: Made Tommy-Thin;
+        src: url(/MADE\ TOMMY\ Thin_PERSONAL\ USE.otf);
+    }
+
+    h1, h2, h3, h4, h5, h6{
+        font-family: Made Tommy-Black;
+        color: #4E14A8;
+    }
+
+    p{
+        font-family: Made Tommy-Black;
+        color: #4E14A8;
+    }
+
+    *{
+        margin: 0px;
+    }
+
+    body{
+        background-color: #ffffff;
+    }
+
+    h1{
+        text-align: center;
+        margin: 30px;
+    }
+
+    h2{
+        text-align: center;
+    }
+
+    /**/
+
+    #Login{
+        display: grid;
+        align-items:flex-start;
+        justify-content: space-around;
+    }
+
+    section div{
+        justify-content: center;
+        text-align: center;
+    }
+
+    #imagenFondo1{
+        position: absolute;
+        z-index: 3;
+        background: lightgray;
+        width: 90%;
+        left: 16px;
+        bottom: 0px;
+        top: 175px;
+
+    }
+
+    #imagenFondo2{
+        position: absolute;
+        z-index: 3;
+        background: lightgray;
+        width: 90%;
+        left: 16px;
+        bottom: 0px;
+        top: 603px;
+    }
+
+    #imagenFondo3{
+        position: absolute;
+        z-index: 3;
+        background: lightgray;
+        width: 90%;
+        right: 0px;
+        bottom: 0px;
+        top: 1064px;
+        left: 16px;
+    }
+
+    .botoneslogin{
+        background-color: transparent;
+        border: 0px;
+    }
+
+
+    #FondoArribaSuperadministrador{
+        margin: 70px 0px;
+    }
+
+    #FondoArribaAdministrador{
+        margin: 70px 0px 0px;
+    }
+
+    #FondoArribaEmpleado{
+        margin: 70px 0px 0px;
+    }
+
+    .titulos{
+        margin: 20px 0px 0px;
+    }
+
+    section div div form{
+        display: grid;
+    }
+
+    form{
+        display: inline-grid;
+    }
+
+    form input{
+        margin: 10px 0px;
+        padding: 10px 10px;
+        width: 250px;
+        background-color: #7839B220;
+        border: 0px;
+        color: #000000;
+        font-family: Made Tommy-Black;
+        font-size: 15px;
+    }
+
+    .Olvidar{
+        background-color:transparent;
+        border: 0px;
+        color: black;
+        text-align: end;
+        margin-right: 0px;
+        padding: 0px;
+        font-size: 15px;
+        font-family: Made Tommy-Thin;
+    }
+
+    form button{
+        background-color:#4E14A850;
+        border: 0px;
+        color: white;
+        justify-content: center;
+        align-items: center;
+        margin: 10px 50px;
+        padding: 10px;
+        font-size: 20px;
+    }
+
+    button{
+        cursor: pointer;
+    }
+
+    #Empleado{
+        justify-content: center;
+        text-align: center;
+        margin: 60px 0px;
+    }
+}
