--- a/src/main/resources/template/index.html
+++ b/src/main/resources/template/index.html
@@ -28,13 +28,11 @@
                 <a id="Login" href="/Login.html">Ingresa</a>
             </div>
 
-            <div class="menu-hamburguesa">
-                <a href="#somos">Somos</a>
-                <a href="#team">Team</a>
-                <a href="#footer">Contactanos</a>
-                <a id="Plataforma" href="/plataforma.html">Plataforma</a>
-                <a id="Login" href="/Login.html">Ingresa</a>
-            </div>
+
+            <button id="Hamburguesa" onclick="menuhamburguesa()">
+                <img src="/IMG/Hamburguesa.png" alt="">
+            </button>
+
 
         </div>
         
@@ -83,7 +81,7 @@
         </div>
     </div>
     
-    <footer>
+    <footer id="footer">
         <h2>Cuentanos</h2>
         <p>En que te podemos ayudar</p>
         
